@startuml Cine

class Asiento {
    - Reservado: boolean

    'constructor'
    + Asiento ()
    'metodos'
    + getReservado(): boolean
    + reservar(fila: int, columna: int): void
    + cancelarReserva(fila: int, columna: int): void
    +deshacerCancelacion(): void
    
}

class Sala {
    - ArrayList <Arraylist <Asiento>> asientos : Asiento

    'constructor'
    + Sala(filas: int, columnas: int) 

    'metodos'
    + reservarAsiento(fila : int, columna : int): void
    + cancelarReserva(fila : int, columna : int): void
    + mostrarEstadoAsientos(): void
}

class Cine {
    - ArrayList <ArrayList <Sala>> funciones : Sala

    'constructor'
    + Cine(numFunciones : int, numSalasPorFuncion : int, filas : int, columnas : int)

    'metodos'
    + reservarAsiento(sala: int, funcion: int, fila : int, columna: int ): void
    + cancelarReserva(sala: int, funcion: int, fila : int, columna: int ): void
    + mostrarEstadoAsientos(sala: int, funcion: int): void
}

class Reserva {
    main(args: String[]): void
}

class Cancelaciones {
    - Stack<String> cancelacionesPila

    'constructor'
    + Cancelaciones()
    'metodos'
    + agregarCancelacion(cancelacion: String): void
    + deshacerCancelacion(): void
    + mostrarCancelaciones(): void
    + manejarReservaCancelada(funcion: String, sala: int, fila: int, columna: int): void
    
}

Cancelaciones --o Cine
 Sala *-- Asiento
 Reserva ..> Cine: crea
 Cine *-- Sala

@enduml
